--- a/HandManAPI/HandManAPI/HandManAPI.csproj
+++ b/HandManAPI/HandManAPI/HandManAPI.csproj
@@ -235,9 +235,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202006052339014_updates.cs" />
-    <Compile Include="Migrations\202006052339014_updates.designer.cs">
-      <DependentUpon>202006052339014_updates.cs</DependentUpon>
+    <Compile Include="Migrations\202006071859357_updates.cs" />
+    <Compile Include="Migrations\202006071859357_updates.designer.cs">
+      <DependentUpon>202006071859357_updates.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AppDbContext.cs" />
@@ -249,6 +249,7 @@
     <Compile Include="Models\Service.cs" />
     <Compile Include="Models\ViewModels\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\HandManService.cs" />
     <Compile Include="Startup1.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -262,11 +263,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202006052339014_updates.resx">
-      <DependentUpon>202006052339014_updates.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202006071859357_updates.resx">
+      <DependentUpon>202006071859357_updates.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
